save access token in base, and free up resource from singleton!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,8 @@
     <string name="news">НОВОСТИ</string>
     <string name="dash">ДАШБОРД</string>
     <string name="dashboard_name">ДАШБОРД</string>
+    <string name="name">Винный погреб</string>
+    <string name="login">Логин</string>
+    <string name="pass">Пароль</string>
+    <string name="bad">Логин или пароль неверен</string>
 </resources>
